- Framework geimplementeerd. Package structuur gewijzigd. API licht aangepast: Zie "Release notes".
- Implementatie ParseInfo vereenvoudigd.
- Alle "^" in patterns gewijzigd naar "|", volgorde in enkele patterns aangepast